--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon app.js",
+        "database": "node database/creationDB.js",
+        "start": "node app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.21.2"
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.10.0",
+        "pg": "^8.13.1",
+        "pino-http": "^10.4.0",
+        "redis": "^4.7.0",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
         "@commitlint/config-conventional": "^19.7.1",
+        "dotenv": "^16.4.7",
         "husky": "^8.0.3",
+        "nodemon": "^3.1.9",
         "prettier": "^3.4.2"
     }
 }
