--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
-ACCESS_TOKEN_SECRET = require('crypto').randomBytes(64).toString('hex')
-REFRESH_TOKEN_SECRET = require('crypto').randomBytes(64).toString('hex')
-//Эти команды в консоль node
+ACCESS_TOKEN_SECRET = token_secret
+REFRESH_TOKEN_SECRET = token_secret
+
 
 DB_USER = postgres
 DB_PASSWORD = password
