--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "express": "^4.21.2",
+        "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "nodemailer": "^6.10.0",
         "pg": "^8.13.1",
         "pino-http": "^10.4.0",
         "redis": "^4.7.0",
-        "socket.io": "^4.8.1"
+        "socket.io": "^4.8.1",
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
@@ -28,6 +30,6 @@
         "dotenv": "^16.4.7",
         "husky": "^8.0.3",
         "nodemon": "^3.1.9",
-        "prettier": "^3.4.2"
+        "prettier": "^3.5.0"
     }
 }
