--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "scripts": {
         "dev": "nodemon app.js",
-        "database": "node database/creationDB.js",
+        "database": "node config/creationDB.js",
         "start": "node app.js"
     },
     "keywords": [],
