--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.21.2",
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.14.2",
         "nodemailer": "^6.10.0",
         "pg": "^8.13.1",
         "pino-http": "^10.4.0",
