--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "nodemon app.js",
         "database": "node config/creationDB.js",
         "start": "node app.js",
-        "merge-openapi": "node config/doc.js"
+        "merge-openapi": "node config/doc.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -32,7 +33,9 @@
         "@commitlint/config-conventional": "^19.7.1",
         "dotenv": "^16.4.7",
         "husky": "^8.0.3",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.9",
-        "prettier": "^3.5.0"
+        "prettier": "^3.5.0",
+        "supertest": "^7.1.0"
     }
 }
