--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.14.2",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.10.0",
         "pg": "^8.13.1",
         "pino-http": "^10.4.0",
