--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "database": "node config/creationDB.js",
         "start": "node app.js",
         "merge-openapi": "node config/doc.js",
-        "test": "jest"
+        "test": "cross-env NODE_ENV=test jest"
     },
     "keywords": [],
     "author": "",
@@ -32,6 +32,7 @@
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
         "@commitlint/config-conventional": "^19.7.1",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.7",
         "husky": "^8.0.3",
         "jest": "^29.7.0",
