--- a/.env_example
+++ b/.env_example
@@ -1,14 +1,27 @@
-ACCESS_TOKEN_SECRET = token_secret
-REFRESH_TOKEN_SECRET = token_secret
+ACCESS_TOKEN_SECRET = your_access_token_secret_here
+REFRESH_TOKEN_SECRET = your_refresh_token_secret_here
 
+ACCESS_TOKEN_LIFE = 2h
+REFRESH_TOKEN_LIFE = 14d
 
-DB_USER = postgres
-DB_PASSWORD = password
+DB_USER = your_db_user
+DB_PASSWORD = your_db_password
 DB_PORT = 5432
-DB_HOST = loc
-DB_NAME = cryptoDB
+DB_HOST = your_db_host
+DB_NAME = your_db_name
 
-port = 3000
+PORT = 3000
 
-REDIS_HOST = loc
+REDIS_HOST = your_redis_host
 REDIS_PORT = 6379
+
+MONGO_URI = mongodb://your_mongo_user:your_mongo_password@your_mongo_host:27017
+MONGO_DB_NAME = your_mongo_db
+
+MAIL_ADDRESS = your_mail_address
+MAIL_PASSWORD = your_mail_password
+MAIL_STMP = smtp.example.com
+MAIL_PORT = 465
+MAIL_SECURE = true
+EMAIL_CONFIRM_URL = http://localhost:5173/registration/success-activation
+EMAIL_RESET_PASSWORD_URL = http://localhost:5173/forgot-password/reset
